--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "webpack-dev-server --config webpack.config.js",
     "build": "webpack --config webpack.config.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "preact": "^8.2.7"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
