--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "html-webpack-plugin": "^3.0.4",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
