--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.0.4",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
