--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.0.4",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
@@ -32,9 +32,9 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-webpack-plugin": "^0.10.3",
     "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^4.0.1",
+    "webpack": "^3.11.0",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.0.0"
   },
   "keywords": [
     "preact"
