--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "base64-inline-loader": "^1.1.0",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
